# Neural_Techies-HackSpire2025

learnflow/: package-lock.json  package.json  tailwind.config.ts
learnflow-ai/: README.md  adaptiveLearning.py  explanationGenerator.py  main.py  pyproject.toml  requirements.txt
learnflow/config/: trim-bot-458123-i2-5843da84273c.json
learnflow/src/: middleware.ts
learnflow/src/app/: globals.css  layout.tsx  page.tsx
learnflow/src/app/(user)/: layout.tsx
learnflow/src/app/(user)/dashboard/: page.tsx
learnflow/src/components/: navigation.tsx  sidebar.tsx
learnflow/src/lib/: axios.ts  gen-ai.ts
learnflow/src/section/auth/: actions.ts  logout.tsx  schema.ts
learnflow/src/section/chat/: actions.ts  ai-message.tsx  chat-menu.tsx  chat-modal.tsx  chat-widget.tsx  chatbot.tsx  input-box.tsx  message-list.tsx
learnflow/src/section/landing-page/: cta-section.tsx  features-section.tsx  hero-section.tsx  how-it-works-section.tsx  landing-page.tsx  navbar.tsx  testimonials-section.tsx
learnflow/src/section/learning-path/: actions.ts  course-card.tsx  onboarding-dialog.tsx  onboarding-form.tsx  quiz.tsx
learnflow/src/section/quiz/: quiz-client.tsx
learnflow/src/section/quiz-section/: actions.ts  add-new-card.tsx  ai.ts  helper.ts  new-quiz-modal.tsx  question-card.tsx  quiz-card.tsx  quiz-handler.tsx  results.tsx  types.ts
learnflow/src/section/simplifier/: actions.ts  add-new-card.tsx  db-helper.ts  new-simplifier-modal.tsx  simplifier-card.tsx
learnflow/src/utils/supabase/: database.ts  helper.ts  middleware.ts  server.ts
(+26 files in other folders)
